# crfb-tob-impacts

./: .gcloudignore  .gitignore  .vercelignore  =4.2.0  AGENTS.md  CI_PASSING_FINAL.txt  CLAUDE.md  CLOUD_BATCH_GUIDE.md  COMPLETE_SUCCESS_TIER_SEPARATED.md  DEBUGGING_GUIDE.md  DYNAMIC_SCORING_PROGRESS.md  Dockerfile  FINAL_CLEAN_SUMMARY_FOR_MAX.md  FINAL_SUMMARY.md  GEMINI.md  Makefile  README.md  README_FOR_MAX.md  READ_ME_FIRST_MAX.txt  REFACTORING_SUMMARY.md  REFORM_MODELING_BIBLE.md  REPRODUCIBILITY.md  RESULTS_SUMMARY.md  STATUS.txt  TEMPLATING.md  TIER_SEPARATED_RESULTS.md  all_dynamic_results.csv  all_reforms_dynamic_2026_2027.csv  all_reforms_static_2026_2027.csv  all_static_results.csv  allocate_trust_breakdown.py  analyze_policy_impacts.ipynb  check_dollar_signs.py  check_option2.py  cloudbuild.yaml  combine_results.sh  create_combined_spreadsheet.py  dashboard_data_combined.csv  debug_option8_households.ipynb  generate_markdown.py  (+86 more)
.claude/: launch.json
analysis/: README.md  all_reforms_hf_2026.py  balanced_fix_recompute_spec.md  check_age_distribution_2054.py  check_available_datasets.py  check_top01_seniors_2054.py  create_wharton_comparison_excel.py  h4-custom-reform.ipynb  h6-analysis.ipynb  long_run_rescoring_findings.md  option1_analysis_2026.py  option1_analysis_2034.py  option1_analysis_2054_enhanced.py  option1_analysis_2054_local.py  option1_analysis_2054_new_uprating.py  option1_analysis_2100_enhanced_cps.py  option1_distributional_2054.py  policy-impacts-2100.ipynb  policy-impacts-dynamic.ipynb  saved_h5_all_reforms_2090_2100.md  test_hf_2026.py  (+5 more)
(+561 files in other folders)
